...
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WZB-va-ENM">
                                        <rect key="frame" x="25" y="30" width="343" height="56"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="請輸入電子信箱" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hWV-if-hrL">
                                                <rect key="frame" x="20" y="0.0" width="313" height="56"/>
                                                <accessibility key="accessibilityConfiguration" identifier="emailTF"/>
                                                <color key="textColor" red="0.2627450980392157" green="0.29803921568627451" blue="0.28235294117647058" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                        </subviews>
                                        <constraints>
...
                                    </label>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AEE-bg-dlO">
                                        <rect key="frame" x="25" y="121" width="343" height="56"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="8-20位英文數字混合" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hpg-oR-0K5">
                                                <rect key="frame" x="20" y="0.0" width="247" height="56"/>
                                                <accessibility key="accessibilityConfiguration" identifier="passwordTF"/>
                                                <color key="textColor" red="0.26274509800000001" green="0.29803921570000003" blue="0.28235294119999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VBN-YC-hV6">
                                                <rect key="frame" x="277" y="11" width="46" height="34"/>
...
                                            <color key="titleColor" red="0.2627450980392157" green="0.29803921568627451" blue="0.28235294117647058" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xYc-N6-9Kf" customClass="CustomNextButton" customModule="DefiAPP" customModuleProvider="target">
                                        <rect key="frame" x="25" y="284.33333333333331" width="343" height="52"/>
                                        <color key="backgroundColor" systemColor="systemGray5Color"/>
                                        <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="52" id="Ta6-og-zqa"/>
                                        </constraints>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="登入"/>
                                        <userDefinedRuntimeAttributes>
...
